[gd_scene load_steps=5 format=2]

[ext_resource path="res://Imports/Other/m3x6.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Environment/Scripts/GUI and others/New_game_scene.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 54
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 54
font_data = ExtResource( 1 )

[node name="New_game_scene" type="Node2D"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 35.0
margin_top = 31.0
margin_right = 428.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 1 )
text = "Enter your name, adventurer:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name_Label" type="Label" parent="."]
margin_left = 445.0
margin_top = 33.0
margin_right = 838.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue_button" type="Button" parent="."]
margin_left = 781.0
margin_top = 519.0
margin_right = 793.0
margin_bottom = 539.0
custom_fonts/font = SubResource( 2 )
text = "Continue"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return_button" type="Button" parent="."]
margin_left = 102.0
margin_top = 519.0
margin_right = 219.0
margin_bottom = 568.0
custom_fonts/font = SubResource( 2 )
text = "Return"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node2D" parent="."]

[node name="Q" type="Button" parent="Buttons"]
margin_left = 80.0
margin_top = 146.0
margin_right = 136.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 2 )
text = "Q"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A" type="Button" parent="Buttons"]
margin_left = 110.0
margin_top = 236.0
margin_right = 166.0
margin_bottom = 285.0
custom_fonts/font = SubResource( 2 )
text = "A"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Z" type="Button" parent="Buttons"]
margin_left = 142.0
margin_top = 323.0
margin_right = 198.0
margin_bottom = 372.0
custom_fonts/font = SubResource( 2 )
text = "Z"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="W" type="Button" parent="Buttons"]
margin_left = 153.0
margin_top = 146.0
margin_right = 209.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 2 )
text = "W"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S" type="Button" parent="Buttons"]
margin_left = 183.0
margin_top = 236.0
margin_right = 239.0
margin_bottom = 285.0
custom_fonts/font = SubResource( 2 )
text = "S"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X" type="Button" parent="Buttons"]
margin_left = 215.0
margin_top = 323.0
margin_right = 271.0
margin_bottom = 372.0
custom_fonts/font = SubResource( 2 )
text = "X"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E" type="Button" parent="Buttons"]
margin_left = 220.0
margin_top = 146.0
margin_right = 276.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 2 )
text = "E"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="D" type="Button" parent="Buttons"]
margin_left = 250.0
margin_top = 236.0
margin_right = 306.0
margin_bottom = 285.0
custom_fonts/font = SubResource( 2 )
text = "D"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C" type="Button" parent="Buttons"]
margin_left = 282.0
margin_top = 323.0
margin_right = 338.0
margin_bottom = 372.0
custom_fonts/font = SubResource( 2 )
text = "C"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R" type="Button" parent="Buttons"]
margin_left = 293.0
margin_top = 146.0
margin_right = 349.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 2 )
text = "R"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="F" type="Button" parent="Buttons"]
margin_left = 323.0
margin_top = 236.0
margin_right = 379.0
margin_bottom = 285.0
custom_fonts/font = SubResource( 2 )
text = "F"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="Button" parent="Buttons"]
margin_left = 355.0
margin_top = 323.0
margin_right = 411.0
margin_bottom = 372.0
custom_fonts/font = SubResource( 2 )
text = "V"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T" type="Button" parent="Buttons"]
margin_left = 364.0
margin_top = 146.0
margin_right = 420.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 2 )
text = "T"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="G" type="Button" parent="Buttons"]
margin_left = 394.0
margin_top = 236.0
margin_right = 450.0
margin_bottom = 285.0
custom_fonts/font = SubResource( 2 )
text = "G"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B" type="Button" parent="Buttons"]
margin_left = 426.0
margin_top = 323.0
margin_right = 482.0
margin_bottom = 372.0
custom_fonts/font = SubResource( 2 )
text = "B"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Y" type="Button" parent="Buttons"]
margin_left = 437.0
margin_top = 146.0
margin_right = 493.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 2 )
text = "Y"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H" type="Button" parent="Buttons"]
margin_left = 467.0
margin_top = 236.0
margin_right = 523.0
margin_bottom = 285.0
custom_fonts/font = SubResource( 2 )
text = "H"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N" type="Button" parent="Buttons"]
margin_left = 499.0
margin_top = 323.0
margin_right = 555.0
margin_bottom = 372.0
custom_fonts/font = SubResource( 2 )
text = "N"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="U" type="Button" parent="Buttons"]
margin_left = 504.0
margin_top = 146.0
margin_right = 560.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 2 )
text = "U"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="J" type="Button" parent="Buttons"]
margin_left = 534.0
margin_top = 236.0
margin_right = 590.0
margin_bottom = 285.0
custom_fonts/font = SubResource( 2 )
text = "J"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="M" type="Button" parent="Buttons"]
margin_left = 566.0
margin_top = 323.0
margin_right = 622.0
margin_bottom = 372.0
custom_fonts/font = SubResource( 2 )
text = "M"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_" type="Button" parent="Buttons"]
margin_left = 644.0
margin_top = 323.0
margin_right = 700.0
margin_bottom = 372.0
custom_fonts/font = SubResource( 2 )
text = "_"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="I" type="Button" parent="Buttons"]
margin_left = 577.0
margin_top = 146.0
margin_right = 633.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 2 )
text = "I"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="K" type="Button" parent="Buttons"]
margin_left = 607.0
margin_top = 236.0
margin_right = 663.0
margin_bottom = 285.0
custom_fonts/font = SubResource( 2 )
text = "F"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="O" type="Button" parent="Buttons"]
margin_left = 652.0
margin_top = 146.0
margin_right = 708.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 2 )
text = "O"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P" type="Button" parent="Buttons"]
margin_left = 722.0
margin_top = 146.0
margin_right = 778.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 2 )
text = "P"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backspace" type="Button" parent="Buttons"]
margin_left = 801.0
margin_top = 146.0
margin_right = 857.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 2 )
text = "Backspace"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Caps_lock" type="Button" parent="Buttons"]
margin_left = 741.0
margin_top = 235.0
margin_right = 882.0
margin_bottom = 284.0
custom_fonts/font = SubResource( 2 )
text = "Caps Lock"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L" type="Button" parent="Buttons"]
margin_left = 682.0
margin_top = 236.0
margin_right = 738.0
margin_bottom = 285.0
custom_fonts/font = SubResource( 2 )
text = "L"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Continue_button" to="." method="_on_Continue_button_pressed"]
